DEV: Modify the QR code generation library to allow the alteration of the color of the generated SVG DEV: Adjust the HTML of the flip card to ensure compatibility with Safari on iOS

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -101,46 +101,47 @@ a.social-network, a.social-network span {
     display: flex;
 }
 
-.flipcard {
-    width: 100%;
-    position: relative;
+.flip-card {
+    background-color: transparent;
+    height: auto;
+    perspective: 1000px;
 }
 
-.flipcard-front,
-.flipcard-back {
-    -webkit-backface-visibility: hidden; /* Safari */
+.flip-card-inner {
+    position: relative;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-card.flipped .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    transition: transform 0.5s ease;
 }
 
-.flipcard-front {
+.flip-card-front {
     position: relative;
 }
 
-.flipcard-back {
+.flip-card-back {
     position: absolute;
-    top: 0; left: 0; width: 100%; height: 100%;
-    transform: perspective(600px) rotateY(180deg);
-    background-color: #ebf4ff;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(180deg);
 }
 
-.flipcard-back.flipped {
-    transform: perspective(600px) rotateY(0deg);
-}
-
-.flipcard-front {
-    transform: perspective(600px) rotateY(0deg);
-}
-
-.flipcard-front.flipped {
-    transform: perspective(600px) rotateY(-180deg);
-}
-
-.flipimage {
+.flip-image {
     position: absolute;
     top: 4px;
     right: 7px;
     cursor: pointer;
+
 }
 
 .qrcode-image {
